--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Barbershop</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:700&amp;subset=cyrillic" rel="stylesheet">
@@ -63,10 +64,59 @@
 					<p>МНАШИ МАСТЕРА — ПРОФЕССИОНАЛЫ СВОЕГО ДЕЛА И НЕ МОГУТ СТОИТЬ ДЕШЕВО. К ТОМУ ЖЕ, РАЗВЕ ЦЕНА НЕ ДАЕТ ОПРЕДЕЛЕНЫЙ СТАТУС?</p>
 				</div>
 			</div>
+			<div class="contact-log-wrap container">
+				<div class="contact-info">
+					<h2>КОНТАКТНАЯ ИНФОРМАЦИЯ</h2>
+					<p>BARBERSHOP «BORODINSKI»</p>
+						<p>АДРЕС: Г. МОСКВА, УЛ. СОБАКИ ПАВЛОВА, Д. 13</p>
+						<p>ТЕЛЕФОН: +7 (495) 666-02-666</p>
+						<p>
+						ВРЕМЯ РАБОТЫ: </p>
+						<p>ПН — ПТ: С 10:00 ДО 22:00</p>
+						<p>СБ — ВС: С 10:00 ДО 19:00
+					</p>
+					<button>КАК ПРОЕХАТЬ</button>
+					<button>ОБРАТНАЯ СВЯЗЬ</button>
+				</div>
+				<div class="register-wrap">
+					<h2>ЗАПИСАТЬСЯ</h2>
+					<p>УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
+					<div class="datetime-wrap">
+						<input type="text" value="ДАТА" id="date">
+					<input type="text" value="ВРЕМЯ" id="time">
+				</div>
+				<div class="name-tel-wrap">
+					<input type="text" value="ВАШЕ ИМЯ" id="yourname">
+					<input type="text" value="ТЕЛЕФОН" id="tel">
+				</div>
+				<button>ОТПРАВИТЬ</button>
+				</div>
+			</div>
 
 
 		
 	</main>
+		<footer class="footer">
+			<div class="footer-wrap container">
+				<div class="address">
+					<p>BARBERSHOP «BORODINSKI»</p>
+						<p>АДРЕС: Г. МОСКВА, УЛ. СОБАКИ ПАВЛОВА, Д. 13</p>
+						<p>ТЕЛЕФОН: +7 (495) 666-02-666</p>
+						</div>
+				<div class="socials">
+					<div class="lets-frend"><p>ДАВАЙТЕ ДРУЖИТЬ!</p></div>
+					<div class="icons">
+						<p><a href="#" class="vk"></a></p>
+					<p><a href="#" class="fb"></a></p>
+					<p><a href="#" class="inst"></a></p>
+					</div>
+				</div>
+				<div class="developers">
+					<p>ДИЗАЙН САЙТА:</p>
+					<span>GLUKHANKO.RU</span>
+				</div>
+			</div>
+		</footer>
 
 
 </div>
