--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:700&amp;subset=cyrillic" rel="stylesheet">
    
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-
+	
 </head>
 <body>
 <div class="wrapper">
 	<header class="header">
         
 		<div class="container flex">
-			<label for="toggle">&#9776;</label>
-				<input type="checkbox" id="toggle">
-				
+			
+				<span class="mobile-menu"></span>
 			<nav class="navigation">
 
 
@@ -82,12 +81,12 @@
 					<h2>ЗАПИСАТЬСЯ</h2>
 					<p>УКАЖИТЕ ЖЕЛАЕМУЮ ДАТУ И ВРЕМЯ И МЫ СВЯЖЕМСЯ С ВАМИ ДЛЯ ПОДТВЕРЖДЕНИЯ БРОНИ</p>
 					<div class="datetime-wrap">
-						<input type="text" value="ДАТА" id="date">
-					<input type="text" value="ВРЕМЯ" id="time">
+						<input type="text" placeholder="ДАТА" id="date">
+					<input type="text" placeholder="ВРЕМЯ" id="time">
 				</div>
 				<div class="name-tel-wrap">
-					<input type="text" value="ВАШЕ ИМЯ" id="yourname">
-					<input type="text" value="ТЕЛЕФОН" id="tel">
+					<input type="text" placeholder="ВАШЕ ИМЯ" id="yourname">
+					<input type="text" placeholder="ТЕЛЕФОН" id="tel">
 				</div>
 				<button>ОТПРАВИТЬ</button>
 				</div>
@@ -117,8 +116,35 @@
 				</div>
 			</div>
 		</footer>
+		<div class="popup-wrapper">
+			<div class="popup-inner">
+			<div class="popup">
+				<div class="ttitle30"><h2>ЛИЧНЫЙ КАБИНЕТ</h2></div>
+				<p>ВВедите пожалуйста свой логин и пароль
+					Если вы забыли пароль</p>
+					<form>
+						<div class="login-filed"><input type="text" name="login" placeholder="ЛОГИН"></div>
+						<div class="pass-field"><input type="text" name="password" placeholder="ПАРОЛЬ"></div>
+						<div class="forgot">
+							<div>
+								<input type="checkbox" name="forgot" id="forgot">
+								<label for="forgot">Запомните меня</label>
+							</div>
+							<div>
+								<a href="#">Я забыл пароль!</a>
+							</div>
+						</div>
+						<input type="submit" name="submit" value="Войти" id="logins">
+					</form>
+					<span class="close"></span>
+
+
 
 
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="js/script.js"></script>
+
 </body>
+
 </html>
