--- a/price-list.html
+++ b/price-list.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:700&amp;subset=cyrillic" rel="stylesheet">
    <link rel="stylesheet" type="text/css" href="css/swiper.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	
+	<link href="css/magnify.css" rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">
@@ -98,6 +98,7 @@
 <script src="js/swiper.min.js"></script>
 <script src="js/script.js"></script>
 <script src="js/xzoom.js"></script>
+<script src="js/jquery.magnify.js"></script>
 
 
 </body>
