--- a/shop.html
+++ b/shop.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:700&amp;subset=cyrillic" rel="stylesheet">
    <link rel="stylesheet" type="text/css" href="css/swiper.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	
+	<link href="css/magnify.css" rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">
@@ -213,7 +213,7 @@
 							</div>
 							<div class="scroll-pages flex">
 								<div class="squere"><a href="#">1</a></div>
-								<div class="squere active"><a href="#">2</a></div>
+								<div class="squere"><a href="#" class="activesq">2</a></div>
 								<div class="squere"><a href="#">3</a></div>
 								<div class="squere"><a href="#">4</a></div>
 							</div>
@@ -299,5 +299,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="js/swiper.min.js"></script>
 <script src="js/script.js"></script>
+<script src="js/jquery.magnify.js"></script>
 </body>
 </html>
