--- a/product.html
+++ b/product.html
@@ -61,8 +61,8 @@
 									
     <div class="swiper-wrapper">
       <div class="swiper-slide"><img src="images/mainproductimg.png" alt="item-product" data-magnify-src="images/mainproductimg.png"></div>
-      <div class="swiper-slide"><img src="images/barberimg2-min.jpg" alt="item-product" class="xzoom-gallery" data-magnify-src="images/barberimg2-min.jpg"></div>
-      <div class="swiper-slide"><img src="images/barberimg3-min.jpg" alt="item-product" class="xzoom-gallery" data-magnify-src="images/barberimg3-min.jpg"></div>
+      <div class="swiper-slide"><img src="images/barberimg2-min.jpg" alt="item-product"  data-magnify-src="images/barberimg2-min.jpg"></div>
+      <div class="swiper-slide"><img src="images/barberimg3-min.jpg" alt="item-product"  data-magnify-src="images/barberimg3-min.jpg"></div>
       </div>
     </div>
    
@@ -95,7 +95,7 @@
 								<p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p></div>
 								<div class="text-bottomshop">
 								<h3>В набор входят:</h3>
-								<ul>
+								<ul class="marked-list">
 								<li>	<i class='shape18'></i>Средство для умывания (50 мл)</li>
 								<li>	<i class='shape18'></i>Увлажняющий крем (50 мл)</li>
 								<li>	<i class='shape18'></i>Крем для бритья (50 мл)</li>
