--- a/info.html
+++ b/info.html
@@ -39,7 +39,29 @@
 
 		</div>
 	</header>
-	<div class="main-content ">
+	<div class="main-content shop-store">
+		<div class="shop-page container">
+				<div class="title-shop">
+					<h2 class="title-shop30">Информация</h2>
+					<ul class="breadcrumb widthbreado">
+					  <li><a href="index.html">Главная</a><i class='shape16'></i></li>
+					  
+					  <li class="active"><a href="info.html">Информация</a></li>
+
+					  
+					</ul>
+				</div>
+				<div class="about-ustxt">
+					<h4 class="title24">О нас</h4>
+					<div class="aboutus-content flex">
+					<div class="content-aboutus"><p><span>Borodinski</span> barbershop соединил в себе старинные традиции с технологиями, кинематографическое освещение для качественной геометрии в стрижках и классические техники с искусством скульптуры мужской стрижки, только так можно раскрыть и создать индивидуальный, уверенный образ.
+Наша мужская парикмахерская - первая, кто осмелилась нарушить все стереотипы, мы симбиоз Барберов, скульпторов и классиков - стремящихся к совершенству. Еженедельно проводим встречи и мастер-классы в Москве, делимся секретами и тонкостями правильного бритья в домашних условиях опасной бритвой, ритуалах королевского бритья. Практические советы об уходе за бородой и усами и правильной укладке волос. Мы хотим помочь настоящим мужчинам быть еще более независимыми и уверенными в себе.<span> Borodinski </span>барбершоп - мужской клуб в котором вы не только станете лучше, но и будете вооружены опытом наших предков.<span> Borodinski</span> - имеет главную особенность, это первый Barbershop в Москве, открытый мастерами.
+
+</p></div>
+<div class="aboutus-img"><img src="images/aboutus.jpg">
+</div>
+</div>
+</div>
 		</div>
 	<footer class="footer">
 			<div class="footer-wrap container">
