--- a/price-list.html
+++ b/price-list.html
@@ -43,10 +43,10 @@
 		<div class="shop-page container">
 				<div class="title-shop">
 					<h2 class="title-shop30">Barbershop Borodinski — Прайс-лист</h2>
-					<ul class="breadcrumb widthbread">
+					<ul class="breadcrumb widthbreads">
 					  <li><a href="index.html">Главная</a><i class='shape16'></i></li>
 					  
-					  <li class="active"><a href="shop.html">Прайс-лист</a></li>
+					  <li class="active"><a href="price-list.html">Прайс-лист</a></li>
 
 					  
 					</ul>
