--- a/contacts.html
+++ b/contacts.html
@@ -41,11 +41,12 @@
 	</header>
 	<div class="main-content allbackground  ">
 		<div class="container">
-		<div class="breadcrumb ">
-		<ul class="breadcrumb widthbread">
+		<div class="title-shop">
+					<h2 class="title-shop30">Контакты</h2>
+					<ul class="breadcrumb widthbreads">
 					  <li><a href="index.html">Главная</a><i class='shape16'></i></li>
 					  
-					  <li class="active"><a href="shop.html">Контакты</a></li>
+					  <li class="active"><a href="contacts.html">Контакты</a></li>
 
 					  
 					</ul>
@@ -63,7 +64,7 @@
 							<div class="phonenumb">
 							<div class="title24">Телефон
 							</div>
-							<div><a href="+749566602666">+749566602666</a></div>
+							<div><a href="tel:+749566602666">+7 (495) 666-02-666</a></div>
 						</div>
 						</div>
 
