--- a/price-list.html
+++ b/price-list.html
@@ -24,7 +24,7 @@
 				<ul>
 					<li><a href="index.html">Главная</a></li>
 					<li><a href="info.html">Информация</a></li>
-					<li><a href="news.html">Новости</a></li>
+					<li><a href="reviews.html">Отзывы</a></li>
 					<li class="active"><a href="price-list.html">Прайс-лист</a></li>
 					<li ><a href="shop.html">Магазин</a></li>
 					<li ><a href="contacts.html">Контакты</a></li>
