--- a/reviews.html
+++ b/reviews.html
@@ -46,7 +46,7 @@
 					<ul class="breadcrumb widthbreador">
 					  <li><a href="index.html">Главная</a><i class='shape16'></i></li>
 					  
-					  <li class="active"><a href="info.html">Отзывы</a></li>
+					  <li class="active"><a href="reviews.html">Отзывы</a></li>
 
 					  
 					</ul>
